--- a/index.html
+++ b/index.html
@@ -4,22 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CoolKidZ Registration</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container">
+    <div class="registration-container">
         <h1>Register</h1>
-        <div class="form-container">
-            <div class="input-box">
-                <input type="text" id="username" placeholder="Username (6-9 letters)" maxlength="9" required>
-            </div>
-            <div class="input-box">
-                <input type="password" id="password" placeholder="Password" required>
-            </div>
-            <button onclick="register()">Register</button>
-        </div>
+        <form id="registrationForm">
+            <label for="username">Username (6-9 letters):</label>
+            <input type="text" id="username" required minlength="6" maxlength="9" placeholder="Enter your username">
+            <label for="password">Password:</label>
+            <input type="password" id="password" required placeholder="Enter your password">
+            <button type="submit">Register</button>
+        </form>
+        <p id="errorMessage" style="color: red;"></p>
     </div>
-
     <script src="script.js"></script>
 </body>
 </html>
