--- a/index.html
+++ b/index.html
@@ -104,6 +104,11 @@
             window.location.href = 'https://wafflenugget.github.io/CoolKidZ-Registration/'; // Redirect to registration page
         });
 
+        // Sign in functionality
+        document.getElementById('sign-in-btn').addEventListener('click', function() {
+            window.location.href = 'https://wafflenugget.github.io/CoolKidZ-Registration/'; // Redirect to registration page
+        });
+
         // Add video functionality
         document.getElementById('add-video-btn').addEventListener('click', function() {
             const modal = document.getElementById('add-video-modal');
